@@ -64,8 +64,6 @@ struct avt_data
 
   uint_least16_t (*read16) (avt_data * self);
 
-  uint_least32_t (*read24) (avt_data * self);
-
   uint_least32_t (*read32) (avt_data * self);
 
   int (*filenumber) (avt_data * self);
